--- a/env.template
+++ b/env.template
@@ -10,3 +10,5 @@ INFLUXDB_V2_ORG=gauchitron
 INFLUXDB_V2_TOKEN=https://v2.docs.influxdata.com/v2.0/security/tokens/view-tokens/
 INFLUXDB_V2_TIMEOUT=6000
 INFLUXDB_V2_TAG_HOSTNAME=gauchitron-devel
+
+DJANGO_API_TOKEN=e6e967dd30476629db3d4bf5e651d1cd720541cb
